[project]
name = "workshopia"
version = "0.1.0"
requires-python = ">=3.11, <3.12"
dependencies = [
    "chromadb==0.4.24",
    "faiss-cpu>=1.13.2",
    "greenlet==3.0.3",
    "langchain==0.2.16",
    "langchain-community==0.2.17",
    "langchain-groq==0.1.9",
    "pypdf>=6.9.2",
    "sentence-transformers==2.7.0",
    "streamlit>=1.56.0",
    "torch==2.1.0",
    "transformers==4.35.0",
]
